[package]
name = "async-ssh2-lite"
version = "0.1.3"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Asynchronous ssh2."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/async-ssh2-lite"
homepage = "https://github.com/bk-rs/async-ssh2-lite"
documentation = "https://docs.rs/async-ssh2-lite"
keywords = ["SSH", "SSH2"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"

[dependencies]
ssh2 = { version = "0.8", default-features = false, features = [] }
async-io = { version = "0.1", default-features = false, features = [] }
futures-io = { version = "0.3", default-features = false, features = ["std"] }
pin-utils = { version = "0.1", default-features = false, features = [] }

[workspace]
members = [
    "demos/smol",
]
