[package]
name = "async-ssh2-lite"
version = "0.2.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Asynchronous ssh2."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ssh-rs"
homepage = "https://github.com/bk-rs/ssh-rs"
documentation = "https://docs.rs/async-ssh2-lite"
keywords = ["SSH", "SSH2"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"

[features]
default = ["async-io", "tokio"]

vendored-openssl = ["ssh2/vendored-openssl"]

_integration_tests = []

[dependencies]
ssh2 = { version = "0.9", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
async-trait = { version = "0.1", default-features = false }

async-io = { version = "1.3", default-features = false, optional = true }
tokio = { version = "1", default-features = false, features = ["net"], optional = true }

[dev-dependencies]
futures-lite = { version = "1" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

env_logger = { version = "0.9" }

[package.metadata.cargo-all-features]
denylist = [
    "_integration_tests"
]
