[package]
name = "async-ssh2-lite"
version = "0.4.5"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Asynchronous ssh2."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ssh-rs"
homepage = "https://github.com/bk-rs/ssh-rs"
documentation = "https://docs.rs/async-ssh2-lite"
keywords = ["SSH", "SSH2"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"

[package.metadata.docs.rs]
features = [ "tokio", "async-io" ]

[features]
default = []

vendored-openssl = ["ssh2/vendored-openssl"]

_integration_tests = []
_integration_tests_tokio_ext = []

[dependencies]
ssh2 = { version = "0.9.4", default-features = false }
libssh2-sys = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["io", "std", "async-await-macro"] }
async-trait = { version = "0.1", default-features = false }

async-io = { version = "1.3", default-features = false, optional = true }
tokio = { version = "1", default-features = false, features = ["net", "time", "rt", "io-util"], optional = true }

[dev-dependencies]
futures-lite = { version = "1" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

cfg-if = { version = "1" }
tempfile = { version = "3" }
uuid = { version = "1", features = ["v4"] }
rand = { version = "0.8" }

hyper = { version = "0.14", features = ["server", "client", "http1", "tcp"] }
portpicker = { version = "0.1" }

env_logger = { version = "0.9" }

[package.metadata.cargo-all-features]
denylist = [
    "vendored-openssl",
    "_integration_tests",
    "_integration_tests_tokio_ext",
]
