[package]
name = "bb8-async-ssh2-lite"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio"]

tokio = ["async-ssh2-lite/tokio"]

[dependencies]
async-ssh2-lite = { version = "0.4", default-features = false, path = "../async-ssh2-lite" }

bb8 = { version = "0.8", default-features = false }
async-trait = { version = "0.1", default-features = false }
