[package]
name = "bb8-async-ssh2-lite"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Asynchronous ssh2 connection pool."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ssh-rs"
homepage = "https://github.com/bk-rs/ssh-rs"
documentation = "https://docs.rs/bb8-async-ssh2-lite"
keywords = ["SSH", "SSH2"]
categories = []
readme = "README.md"

[features]
default = ["tokio"]

tokio = ["async-ssh2-lite/tokio", "tokio_crate"]

[dependencies]
async-ssh2-lite = { version = "0.4", default-features = false, path = "../async-ssh2-lite" }

bb8 = { version = "0.8", default-features = false }
async-trait = { version = "0.1", default-features = false }

tokio_crate = { version = "1", default-features = false, features = ["time"], optional = true, package = "tokio" }

[dev-dependencies]
tokio_crate = { version = "1", features = ["macros", "rt-multi-thread", "net"], package = "tokio" }

futures-util = { version = "0.3" }
