[package]
name = "async-ssh2-lite-demo-smol"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"

[[bin]]
name = "auth_with_pubkey"
path = "src/auth_with_pubkey.rs"

[[bin]]
name = "auth_with_ssh_agent"
path = "src/auth_with_ssh_agent.rs"

[[bin]]
name = "download_file"
path = "src/download_file.rs"

[[bin]]
name = "inspect_sftp"
path = "src/inspect_sftp.rs"

[[bin]]
name = "inspect_ssh_agent"
path = "src/inspect_ssh_agent.rs"

[[bin]]
name = "proxy_jump"
path = "src/proxy_jump.rs"

[[bin]]
name = "remote_port_forwarding"
path = "src/remote_port_forwarding.rs"

[[bin]]
name = "run_commands"
path = "src/run_commands.rs"

[[bin]]
name = "sample"
path = "src/sample.rs"

[[bin]]
name = "upload_file"
path = "src/upload_file.rs"

[dependencies]
async-ssh2-lite = { path = "../..", version = "0.2", futures = ["async-io"] }
futures = "0.3"
async-io = "1.3"
async-executor = "1.4"
easy-parallel = "3.1"
async-channel = "1.5"
tempfile = "3.1"
cfg-if = "1.0"
uuid = { version = "0.8", features = ["v4"] }
