[package]
name = "async-ssh2-lite-demo-smol"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"

[[bin]]
name = "proxy_jump"
path = "src/proxy_jump.rs"

[[bin]]
name = "remote_port_forwarding"
path = "src/remote_port_forwarding.rs"

[[bin]]
name = "sample"
path = "src/sample.rs"

[dependencies]
async-ssh2-lite = { path = "../..", version = "0.2", features = ["async-io"] }
futures = "0.3"
async-io = "1.3"
async-executor = "1.4"
easy-parallel = "3.1"
async-channel = "1.5"
tempfile = "3.1"
cfg-if = "1.0"
uuid = { version = "0.8", features = ["v4"] }
