[package]
name = "async-ssh2-lite-demo-smol"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"

[[bin]]
name = "proxy_jump"
path = "src/proxy_jump.rs"

[dependencies]
async-ssh2-lite = { path = "../..", features = ["async-io"] }
futures = "0.3"
async-io = "2.3"
async-executor = "1.13"
easy-parallel = "3.3"
async-channel = "2.3"
tempfile = "3.10"
cfg-if = "1.0"
